[project]
name = "strongbus"
version = "0.2.0"
description = "A type-safe event bus library for Python that provides reliable publish-subscribe messaging with automatic memory management, full type safety, and global event subscriptions for cross-cutting concerns like logging."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marius Räsener", email = "marius@raesener.de" }]
requires-python = ">=3.10"
dependencies = []
keywords = ["events", "event-bus", "typed", "type-safe", "pubsub"]

[project.urls]
Repository = "https://github.com/elmcrest/strongbus"

[project.optional-dependencies]
dev = ["tox", "build", "pytest-cov>=6.2.1", "ruff>=0.12.3", "ty>=0.0.1a14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
