[project]
name = "strongbus"
version = "0.3.0"
description = "A type-safe event bus library for Python that provides reliable publish-subscribe messaging with automatic memory management, full type safety, and global event subscriptions for cross-cutting concerns like logging."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marius Räsener", email = "marius@raesener.de" }]
requires-python = ">=3.11"
dependencies = []
keywords = ["events", "event-bus", "typed", "type-safe", "pubsub"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/elmcrest/strongbus"

[project.optional-dependencies]
dev = [
    "tox",
    "tox-uv",
    "build",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# keep tests, tox.ini, and uv.lock for downstream packagers;
# exclude repo tooling that has no use in a source archive
# (.gitignore can't be excluded: hatchling always ships it because
# rebuilding from the sdist selects files through it)
exclude = [
    ".github",
    ".python-version",
    ".vscode",
    "CLAUDE.md",
]
